Fix for bug 259816: Browser steals focus from program selected in 'Open With' dialog r=neil sr=roc